# UniversalUI-GPU

./: README.md
Windows/: main.cpp
Windows/VS/UniversalUI-GPU/: UniversalUI-GPU.sln  UniversalUI-GPU.vcxproj  UniversalUI-GPU.vcxproj.filters
Windows/VS/UniversalUI-GPU/x64/Debug/: UniversalUI-GPU.exe.recipe  UniversalUI-GPU.ilk  UniversalUI-GPU.vcxproj.FileListAbsolute.txt  main.obj.enc  vc143.idb
Windows/VS/UniversalUI-GPU/x64/Debug/UniversalUI-GPU.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  UniversalUI-GPU.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/universalui_gpu/: Cargo.toml
Windows/universalui_gpu/src/: main.rs
universalui_win32/: Cargo.toml
universalui_win32/src/: core.rs  window.rs
windows_vulkan_test/: Cargo.toml
windows_vulkan_test/src/: main.rs
